# rust-wallet-fleet

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: config.rs  main.rs
backend/src/collecting/: collecting.rs  default_collecting.rs  mod.rs
backend/src/endpoints/: collecting.rs  funding.rs  mod.rs  responses.rs  wallet.rs
backend/src/errors/: errors.rs
backend/src/funding/: funding.rs  local_funding.rs  mod.rs
backend/src/rpc/: core.rs  mod.rs  read.rs  send.rs
backend/src/storage/: local_wallet_storage.rs  mnemonic_wallet_storage.rs  mod.rs  wallet.rs
backend/src/txn_factory/: blockhash.rs  mod.rs  swaps.rs  transfer.rs  util.rs
backend/src/websocket/: mod.rs  solana_websocket.rs
crates/xtask/src/: main.rs
frontend/wallet-fleet/: package-lock.json  package.json  svelte.config.js  tsconfig.json
frontend/wallet-fleet/src/: app.css  heading.svelte
frontend/wallet-fleet/src/components/: collecting-modal.svelte  funding-modal.svelte  toast.svelte
frontend/wallet-fleet/src/components/sidebar/: sidebar-button.svelte  sidebar.svelte
frontend/wallet-fleet/src/routes/: +layout.svelte  +page.svelte
frontend/wallet-fleet/src/routes/wallets/: +page.svelte  +page.ts
frontend/wallet-fleet/src/util/: api.ts  toast.ts  util.ts
src/: commands.rs  core.rs  main.rs  wallet.rs
