[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
bs58 = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
solana-sdk = "3.0.0"
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12", features = [
    "json",
    "http2",
    "rustls-tls",
    "blocking",
] }
thiserror = "2.0.17"
async-trait = "0.1.89"
solana-system-interface = { version = "2.0.0", features = ["bincode"] }
bincode = "1.3"
dotenvy = "0.15.7"
tower-http = { version = "0.6.6", features = ["cors"] }
